--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,11 @@ edition = "2018"
 ureq = { version = "2.2.*", features = ["json", "charset"] }
 yaml-rust = "0.4"
 serde_json = "1.0.*"
-ssh2 = "0.9"
+ssh2 = { version = "0.9", optional = true }
 rpassword = "5.0"
 
-
+[features]
+default = ["ssh"]
+provision = []
+control = []
+ssh = ["ssh2"]
