--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,14 @@ edition = "2018"
 [dependencies]
 ureq = { version = "2.2.*", features = ["json", "charset"] }
 yaml-rust = "0.4"
+serde = { version = "1.0.*", features = ["derive"] }
 serde_json = "1.0.*"
 ssh2 = { version = "0.9", optional = true }
 rpassword = "5.0"
 
 [features]
-default = ["ssh"]
+#default = ["ssh"]
+default = []
 provision = []
 control = []
 ssh = ["ssh2"]
