Change back default to use ssh, so that Linux works by default but MacOS won't without modification (or OpenSSL being installed).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,8 @@ ssh2 = { version = "0.9", optional = true }
 rpassword = "5.0"
 
 [features]
-#default = ["ssh"]
-default = []
+default = ["ssh"]
+#default = []
 provision = []
 control = []
 ssh = ["ssh2"]
