Tweaked naming of actions, to be more consistent, and made some tweaks to Vultr provision providor.

--- a/examples/control/actions/debian_install_packages.yaml
+++ b/examples/control/actions/debian_install_packages.yaml
@@ -3,7 +3,7 @@
  host: $PROMPT
  user: $PROMPT
  actions:
- - packagesInstall:
+ - installPackages:
     package: single_package
     packages:
       - package1
