Fixed up openssh feature build, and set that back to the default state in Cargo.toml, given the ssh-rs version is WIP and non-functional currently.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,8 @@ temp-file = { version = "0.1.7", optional = true }
 rpassword = "5.0"
 
 [features]
-#default = ["openssh"]
-default = ["sshrs"]
+default = ["openssh"]
+#default = ["sshrs"]
 #default = []
 provision = []
 control = []
