--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "prod"
 version = "0.2.0"
-authors = ["Peter Pearson <peter.pearson@gmail.com>"]
+authors = ["Peter Pearson"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -12,13 +12,13 @@ yaml-rust = "0.4"
 serde = { version = "1.0.*", features = ["derive"] }
 serde_json = "1.0.*"
 ssh2 = { version = "0.9", optional = true }
-ssh-rs = { version = "0.3.2", optional = true }
+ssh-rs = { version = "0.4.2", optional = true, features = ["scp"] }
 temp-file = { version = "0.1.7", optional = true }
 rpassword = "5.0"
 
 [features]
-default = ["openssh"]
-#default = ["sshrs"]
+#default = ["openssh"]
+default = ["sshrs"]
 #default = []
 provision = []
 control = []
