--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,25 @@
 [package]
 name = "prod"
-version = "0.2.0"
+version = "0.3.0"
 authors = ["Peter Pearson"]
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ureq = { version = "2.8.*", features = ["json", "charset"] }
+# TODO: replace this with yaml-rust2 in the future...
 yaml-rust = "0.4"
+
+# provision items
+# TODO: make these optional base off if the 'provision' feature is enabled or not
+ureq = { version = "2.9.*", features = ["json", "charset"] }
 serde = { version = "1.0.*", features = ["derive"] }
 serde_json = "1.0.*"
+
+# control items
 ssh2 = { version = "0.9", optional = true }
 ssh-rs = { version = "0.4.2", optional = true, features = ["scp"] }
-temp-file = { version = "0.1.7", optional = true }
+temp-file = { version = "0.1.8", optional = true }
 rpassword = "5.0"
 
 [features]
