--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2021"
 yaml-rust = "0.4"
 
 # provision items
-# TODO: make these optional base off if the 'provision' feature is enabled or not
+# TODO: make these optional based off if the 'provision' feature is enabled or not
 ureq = { version = "2.9.*", features = ["json", "charset"] }
 serde = { version = "1.0.*", features = ["derive"] }
 serde_json = "1.0.*"
