--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,22 +11,26 @@ edition = "2021"
 yaml-rust = "0.4"
 
 # provision items
-# TODO: make these optional based off if the 'provision' feature is enabled or not
-ureq = { version = "2.9.*", features = ["json", "charset"] }
-serde = { version = "1.0.*", features = ["derive"] }
-serde_json = "1.0.*"
+ureq = { version = "2.9.*", optional = true, features = ["json", "charset"] }
+serde = { version = "1.0.*", optional = true, features = ["derive"] }
+serde_json = { version = "1.0.*", optional = true }
 
 # control items
 ssh2 = { version = "0.9", optional = true }
 ssh-rs = { version = "0.4.2", optional = true, features = ["scp"] }
 temp-file = { version = "0.1.8", optional = true }
-rpassword = "5.0"
+rpassword = { version = "5.0", optional = true }
 
 [features]
-#default = ["openssh"]
-default = ["sshrs"]
-#default = []
-provision = []
-control = []
+# TODO: add support at the code level for conditional enabling of provision/control parts of prod
+provision = ["ureq", "serde", "serde_json"]
+control = ["rpassword"]
+
 openssh = ["ssh2"]
 sshrs = ["ssh-rs", "temp-file"]
+
+#default = ["openssh",
+default = ["sshrs",
+    "control",
+    "provision"
+    ]
