Changed how the addUser Control Action is configured in terms of groups to make a bit more sense in terms of having a default group separate to other groups (at least for Linux). This is a breaking change in terms of the addUser parameters and their names.

--- a/examples/control/actions/combined/debian_add_user_install_fail2ban_d11.yaml
+++ b/examples/control/actions/combined/debian_add_user_install_fail2ban_d11.yaml
@@ -8,9 +8,7 @@
  - addUser:
     username: newUser
     password: ChangeThisPassword
-    createHome: true
-    shell: /bin/bash
-    groups:
+    extraGroups:
       - sudo
  - installPackages:
     packages:
