--- a/examples/control/actions/combined/debian_add_user_install_fail2ban_d12.yaml
+++ b/examples/control/actions/combined/debian_add_user_install_fail2ban_d12.yaml
@@ -5,12 +5,10 @@
  # Make sure we're running on Debian 12 or later (with systemd logging)
  systemValidation: ">=12"
  actions:
- - addUser:
+- addUser:
     username: newUser
     password: ChangeThisPassword
-    createHome: true
-    shell: /bin/bash
-    groups:
+    extraGroups:
       - sudo
  - installPackages:
     packages:
