--- a/examples/control/actions/individual/debian_add_user.yaml
+++ b/examples/control/actions/individual/debian_add_user.yaml
@@ -7,7 +7,7 @@
     username: test1
     password: $PROMPT
     createHome: true
-    shell: /bin/bash
-    groups:
+    shell: /bin/zsh
+    extraGroups:
       - sudo
 
