--- a/examples/control/actions/individual/fedora_add_user.yaml
+++ b/examples/control/actions/individual/fedora_add_user.yaml
@@ -7,7 +7,6 @@
     username: test1
     password: $PROMPT
     createHome: true
-    shell: /bin/bash
-    groups:
+    extraGroups:
       - wheel
 
