Added ssh rule to example control scripts with the firewall action, as a 'good' example of usage, given some VPS providers' images don't have the rule enabled by default.

--- a/examples/control/actions/combined/debian_install_configure_nginx.yml
+++ b/examples/control/actions/combined/debian_install_configure_nginx.yml
@@ -11,6 +11,7 @@
     type: ufw
     enabled: true
     rules:
+      - "allow ssh"
       - "allow 'Nginx Full'"
  - createDirectory:
     path: /var/www/testsite1.com/
