Updated example debian 12 fail2ban control example to actually be correct for the EditFile control action.

--- a/examples/control/actions/combined/debian_add_user_install_fail2ban_d12.yaml
+++ b/examples/control/actions/combined/debian_add_user_install_fail2ban_d12.yaml
@@ -33,17 +33,16 @@
       onceOnly: true
       reportFailure: false
     replaceLine:
-      matchString: 'bantime  = 10m'
-      replaceString: 'bantime  = 120m'
-      matchType: startsWith
-      onceOnly: true
-      reportFailure: false
-    replaceLine:
-      matchString: 'backend = auto'
-      replaceString: 'backend = systemd'
-      matchType: startsWith
-      onceOnly: true
-      reportFailure: false
+      - matchString: 'bantime  = 10m'
+        replaceString: 'bantime  = 120m'
+        matchType: startsWith
+        onceOnly: true
+        reportFailure: false
+      - matchString: 'backend = auto'
+        replaceString: 'backend = systemd'
+        matchType: startsWith
+        onceOnly: true
+        reportFailure: false
  - systemCtl:
     service: "fail2ban"
     action: start
